# obadh_engine

./: .gitignore  Cargo.toml  KNOWN_ISSUES.md  README.md  TESTING.md  build.sh
data/: conjuncts.csv
data/rules/: conjunct.wiki
docs/: index.html  simplified_rules.md  vowels.md
docs/js/: obadh_engine.js  obadh_engine_bg.wasm
src/: lib.rs
src/definitions/: consonants.rs  diacritics.rs  mod.rs  modifiers.rs  numerals.rs  symbols.rs  vowels.rs
src/engine/: mod.rs  phonology.rs  sanitizer.rs  tokenizer.rs  transliterator.rs
src/linguistic/: conjuncts.rs  mod.rs  phoneme.rs  special.rs  syllable.rs  vowels.rs
src/wasm/: bindings.rs  mod.rs
tests/: basic_tests.rs  bofola_tests.rs  common_words_tests.rs  complex_conjuncts_tests.rs  complex_tests.rs  conjunct_tests.rs  consonant_tests.rs  hasant_tests.rs  io_tests.rs  phola_tests.rs  reph_tests.rs  sanitizer_tests.rs  special_tests.rs  tokenizer_tests.rs  vowel_tests.rs  yaphala_tests.rs
www/: app.js  index.html  index.html.bak  package-lock.json  package.json  style.css  tailwind.config.js
www/css/: input.css  styles.css
www/js/: obadh_engine_bg.wasm
