[package]
name = "obadh_engine"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A linguistically accurate Roman to Bengali transliteration engine"
repository = "https://github.com/yourusername/obadh_engine"
license = "MIT"
keywords = ["bengali", "transliteration", "linguistics", "i18n"]
categories = ["text-processing", "internationalization"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
unicode-normalization = "0.1.22"
lazy_static = "1.4"
regex = "1.8"
unicode-segmentation = "1.10"

# WebAssembly support
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
]}

# Optional: for error handling
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5" # For benchmarking
wasm-bindgen-test = "0.3" # For testing WASM

[profile.release]
# Optimize for speed
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true