[package]
name = "obadh_engine"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A linguistically accurate Roman to Bengali transliteration engine"
repository = "https://github.com/yourusername/obadh_engine"
license = "MIT"
keywords = ["bengali", "transliteration", "linguistics", "i18n"]
categories = ["text-processing", "internationalization"]

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"

[[bin]]
name = "obadh"
path = "src/bin/obadh.rs"

[dependencies]
# Core dependencies
unicode-normalization = "0.1.22"
lazy_static = "1.4"
regex = "1.8"
unicode-segmentation = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI support
clap = { version = "4.4", features = ["derive"] }

# Optional: for error handling
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5" # For benchmarking

[profile.release]
# Optimize for speed
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
