[package]
name = "obadh_engine"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A linguistically accurate Roman to Bengali transliteration engine"
repository = "https://github.com/yourusername/obadh_engine"
license = "MIT"
keywords = ["bengali", "transliteration", "linguistics", "i18n"]
categories = ["text-processing", "internationalization"]

[lib]
crate-type = ["rlib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "obadh"
path = "src/bin/obadh.rs"

[dependencies]
# Core dependencies
unicode-normalization = "0.1.22"
lazy_static = "1.4"
regex = "1.8"
unicode-segmentation = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI support
clap = { version = "4.4", features = ["derive"] }

# WASM support
wasm-bindgen = "0.2.87"
serde-wasm-bindgen = "0.5"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = [
  "Document", 
  "Element", 
  "HtmlElement", 
  "Window", 
  "console",
  "Event",
  "EventTarget",
  "HtmlInputElement",
  "KeyboardEvent",
  "Performance"
] }
console_error_panic_hook = { version = "0.1.7", optional = true }

# Optional: for error handling
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5" # For benchmarking
wasm-bindgen-test = "0.3.37" # For testing WASM

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Optimize for speed
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.wasm-release]
inherits = "release"
lto = true
opt-level = 'z'  # Optimize for size for WASM
panic = 'abort'
